# embedded-queue

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  meson.build  meson_options.txt
.github/: SECURITY.md
.github/workflows/: ci.yml
config/: queue_conf.h  queue_version.h.in
include/: queue.h  queue_conf.h
src/: queue.c  queue.h
test/: meson.build  test_queue_count_mt.c  test_queue_critical.c  test_queue_mt.c  test_queue_safety.c
tests/: meson.build  test_queue.c  test_queue_capacity_1.c  test_queue_clear.c  test_queue_count_mt.c  test_queue_empty_after_cycles.c  test_queue_exact_capacity.c  test_queue_fail.c  test_queue_fail_mode.c  test_queue_immediate_dequeue.c  test_queue_null_validation.c  test_queue_overwrite_mt.c  test_queue_safety.c  test_queue_soak.c  test_queue_wrap.c
